[tool.poetry]
name = "ips-kernelselect"
version = "0.1.0"
description = "ipsuite kernel selection package"
authors = ["Fabian Zills <fzills@icp.uni-stuttgart.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
